--- a/CongWebApp/appsettings.json
+++ b/CongWebApp/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CongWebAppContextConnection": "Server=localhost;database=mycong;uid=root;password=SuperAdmin@7"
+  }
 }
